--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -16,14 +16,12 @@ body {
   position: relative;
   margin-block: u.rem(80);
   margin-inline: u.rem(20);
-  // z-index: 100;
   &__legal {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     gap: u.rem(20);
-    margin-top: u.rem(20);
   }
 }
 
